@@ -123,33 +123,34 @@ class A
     ];
     /** @var array */
     private static $_coreHelpers = [
-        'CArray'        => 'helpers/CArray.php',
-        'CAuth'         => 'helpers/CAuth.php',
-        'CCache'        => 'helpers/CCache.php',
-        'CClass'        => 'helpers/CClass.php',
-        'CConvert'      => 'helpers/CConvert.php',
-        'CCurrency'     => 'helpers/CCurrency.php',
-        'CFile'         => 'helpers/CFile.php',
-        'CFilter'       => 'helpers/CFilter.php',
-        'CGeoLocation'  => 'helpers/CGeoLocation.php',
-        'CHash'         => 'helpers/CHash.php',
-        'CHtml'         => 'helpers/CHtml.php',
-        'CImage'        => 'helpers/CImage.php',
-        'CLoader'       => 'helpers/CLoader.php',
-        'CLocale'       => 'helpers/CLocale.php',
-        'CLog'          => 'helpers/CLog.php',
-        'CMailer'       => 'helpers/CMailer.php',
-        'CMinify'       => 'helpers/CMinify.php',
-        'CNumber'       => 'helpers/CNumber.php',
-        'COauth'        => 'helpers/COauth.php',
-        'CPdf'          => 'helpers/CPdf.php',
-        'CRss'          => 'helpers/CRss.php',
-        'CSessionCache' => 'helpers/CSessionCache.php',
-        'CSoap'         => 'helpers/CSoap.php',
-        'CString'       => 'helpers/CString.php',
-        'CTime'         => 'helpers/CTime.php',
-        'CValidator'    => 'helpers/CValidator.php',
-        'CWidget'       => 'helpers/CWidget.php',
+        'CArray'         => 'helpers/CArray.php',
+        'CAuth'          => 'helpers/CAuth.php',
+        'CCache'         => 'helpers/CCache.php',
+        'CClass'         => 'helpers/CClass.php',
+        'CConvert'       => 'helpers/CConvert.php',
+        'CCurrency'      => 'helpers/CCurrency.php',
+        'CFile'          => 'helpers/CFile.php',
+        'CFilter'        => 'helpers/CFilter.php',
+        'CGeoLocation'   => 'helpers/CGeoLocation.php',
+        'CHash'          => 'helpers/CHash.php',
+        'CHtml'          => 'helpers/CHtml.php',
+        'CImage'         => 'helpers/CImage.php',
+        'CLoader'        => 'helpers/CLoader.php',
+        'CLocale'        => 'helpers/CLocale.php',
+        'CLog'           => 'helpers/CLog.php',
+        'CMailer'        => 'helpers/CMailer.php',
+        'CMinify'        => 'helpers/CMinify.php',
+        'CNumber'        => 'helpers/CNumber.php',
+        'COauth'         => 'helpers/COauth.php',
+        'CPdf'           => 'helpers/CPdf.php',
+        'CRss'           => 'helpers/CRss.php',
+        'CSecureHeaders' => 'helpers/CSecureHeaders.php',
+        'CSessionCache'  => 'helpers/CSessionCache.php',
+        'CSoap'          => 'helpers/CSoap.php',
+        'CString'        => 'helpers/CString.php',
+        'CTime'          => 'helpers/CTime.php',
+        'CValidator'     => 'helpers/CValidator.php',
+        'CWidget'        => 'helpers/CWidget.php',
 	];
 	/** @var array */
     private static $_coreModules = [
